youker-assistant (0.2.2-0ubuntu1) saucy; urgency=low

  * Change skin and add weather forecast information.
  * Get correct system information(LP: #1240862).
  * Get software list and software information dynamically.
  * Start sudodbus server at the same time to scan package cruft(LP: #1242498).
  * Use qtsingleapplication by F.J Kong (kroodylove).

 -- Kobe Lee (kylinkobe) <kobe24_lixiang@126.com>  Tue, 29 Oct 2013 08:40:27 +0800

youker-assistant (0.2.1-0ubuntu1) saucy; urgency=low

  * Modify the mouse events of MonitorBall.
  * Add reset button for clear pages.
  * Add policykit for apt clear in sudodbus.
  * Fixed the bug about software status and add masklayer.
  * Rewrite the code of system information.
  * Add some signals and slots.
  * Fixed the bug about Software signals(LP: #1226389).
  * Modify KThread and add base.py.
  * Fixed the bug about the black widget when operate software(LP: #1231408).

 -- Kobe Lee (kylinkobe) <kobe24_lixiang@126.com>  Thu, 26 Sep 2013 20:08:11 +0800

youker-assistant (0.2.0-0ubuntu1) saucy; urgency=low

  * Modify the MonitorBall from QML to QT.
  * Add recommendation about top software.
  * Add a module and clean trace about file opened.
  * Add progressbar to display operation status and progress.
  * Make it can only start a single program.
  * Modify all status of clean module.

 -- Kobe Lee (kylinkobe) <kobe24_lixiang@126.com>  Fri, 13 Sep 2013 16:57:13 +0800

youker-assistant (0.1.6-0ubuntu1) saucy; urgency=low

  * Modify Class SystemDispatcher and SessionDispatcher.
  * Add watch file into debian folder.
  * Resolve status of onekey button(LP: #1216236 ).
  * Add monitorball code into systemdbus daemon.
  * Optimize the status button.

 -- Kobe Lee (kylinkobe) <kobe24_lixiang@126.com>  Mon, 02 Sep 2013 17:17:45 +0800

youker-assistant (0.1.5-0ubuntu1) saucy; urgency=low

  * 0.1-Release.
  * Add policykit.
  * Make bootimage success.
