@@ -16,6 +16,7 @@
 #include "authdialog.h"
 #include "ui_authdialog.h"
 #include <QMouseEvent>
+#include <QMessageBox>
 bool AuthDialog::eventFilter(QObject *obj, QEvent *event)
 {
     if(obj == ui->btn_min){
@@ -48,10 +49,13 @@ bool AuthDialog::eventFilter(QObject *obj, QEvent *event)
                 QMouseEvent *me = (QMouseEvent *)event;
                 QLabel *lb = (QLabel *)obj;
                 if(me->x() > 0 && me->x() < lb->width() && me->y() > 0 && me->y() < lb->height()){
-                    this->hide();
-//                    this->close();
-//                    this->destroy();
-//                    exit(0);
+//                    this->hide();
+                    this->close();
+                    this->destroy();
+                    QMessageBox::warning(NULL,
+                                         tr("警告"),
+                                         tr("服务没有启动，相关功能将无法正常使用！"),
+                                         QMessageBox::Ok);
                 }else{
                     ui->btn_close->setPixmap(QPixmap(":/pixmap/image/closeBtn.png"));
                 }
