@@ -139,7 +139,7 @@
     <rect>
      <x>0</x>
      <y>0</y>
-     <width>529</width>
+     <width>531</width>
      <height>210</height>
     </rect>
    </property>
